# GANlib

./: Cargo.toml  README.md
data/: test2.gtf
src/: bundle.rs  cds.rs  exon.rs  factory.rs  gene.rs  group.rs  learning.rs  lib.rs  main.rs  object.rs  parser.rs  transcript.rs  transcriptome.rs  treader.rs  txgroup.rs  utils.rs
tests/: integration_tests.rs
