[package]
name = "ganlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
noodles-gtf = "0.10.0"
noodles-gff = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
proptest = "1.0"
petgraph = "0.6.4"

#bio = {git = "https://github.com/alevar/rust-bio.git", branch = "interval_trees"}
bio = {path = "../rust-bio"}